--- a/WarehouseAPI/src/main/resources/templates/allocate/request.html
+++ b/WarehouseAPI/src/main/resources/templates/allocate/request.html
@@ -111,13 +111,13 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                 const postOrder = (id) => {
                     console.log(id);
                     Swal.fire({
-                        title: 'Are you sure?',
+                        title: 'Post order?',
                         text: "You won't be able to revert this!",
                         icon: 'question',
                         showCancelButton: true,
                         confirmButtonColor: '#3085d6',
                         cancelButtonColor: '#d33',
-                        confirmButtonText: 'Yes, delete it!'
+                        confirmButtonText: 'Yes'
                     }).then((result) => {
                         if (result.isConfirmed) {
                             const jsObj = {
