--- a/WarehouseAPI/src/main/resources/templates/incoming/detail.html
+++ b/WarehouseAPI/src/main/resources/templates/incoming/detail.html
@@ -94,25 +94,19 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                                     <div th:if="${item.passed}">
                                         <td><span class="badge badge-success">Passed</span></td>
                                     </div>
-                                    <div th:unless="${item.passed}" sec:authorize="hasRole('ROLE_ADMIN')
-                                         or hasRole('ROLE_MANAGER') or hasRole('ROLE_QC')">
-                                        <td><span class="badge badge-info">Wait for Qc Check</span></td><!--
-                                        <td>
-                                            <button class="btn btn-outline-success" id="btnUpdate" th:onclick="checkQc([[${item.pt_id}]])">ACCEPT</button>
-                                            <button class="btn btn-outline-danger" id="btnReject" th:onclick="deletedItem([[${item.pt_id}]])">REJECT</button>
-                                        </td>
-                                    </div>-->
+                                    <div th:unless="${item.passed}">
+                                        <td><span class="badge badge-info">Wait for Qc Check</span></td>
+                                    </div>
                                 </div>
                                 <!--<td><a th:href="@{/goods/update/{no}(no=${item.goods_no})}">Update</a></td>-->
                                 <td>
                                     <button class="btn btn-outline-danger" th:if="${!incoming.closed}" th:onclick="deletedItem([[${item.pt_id}]])">
                                         <i class="fa fa-trash"></i>
                                     </button>
-                                    <div th:unless="${item.passed}" sec:authorize="hasRole('ROLE_ADMIN')
-                                         or hasRole('ROLE_MANAGER') or hasRole('ROLE_QC')">
-                                            <button class="btn btn-outline-success" id="btnUpdate" th:onclick="checkQc([[${item.pt_id}]])">ACCEPT</button>
-                                            <button class="btn btn-outline-danger" id="btnReject" th:onclick="deletedItem([[${item.pt_id}]])">REJECT</button>
-                                    </div>
+                                     <div th:unless="${item.passed}" sec:authorize="hasRole('ROLE_ADMIN')
+                                          or hasRole('ROLE_MANAGER') or hasRole('ROLE_QC')"><button class="btn btn-outline-success" id="btnUpdate" th:onclick="checkQc([[${item.pt_id}]])">Update</button>
+                                        <button class="btn btn-outline-danger" id="btnReject" th:onclick="deletedItem([[${item.pt_id}]])">REJECT</button></div>
+                                    
                                 </td>
                                 </tr>
                                 </tbody>
@@ -229,7 +223,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                         showDenyButton: true,
                         showCancelButton: false,
                         confirmButtonText: 'Yes',
-                        denyButtonText: `No`
+                        denyButtonText: `No`,
                     }).then((result) => {
                         /* Read more about isConfirmed, isDenied below */
                         if (result.isConfirmed) {
@@ -238,7 +232,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                                 url: `/Incoming/delete-item/${id}`,
                                 success: function (res) {
                                     if (res === 200) {
-                                        Swal.fire('Deleted!', '', 'success').then(function () {
+                                        Swal.fire('Saved!', '', 'success').then(function () {
                                            window.location.reload();     
                                         });
                                     }
@@ -249,7 +243,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                             Swal.fire('Not deleted', '', 'info');
                         }
                     });
-                };
+                }
 
                 $(document).ready(function () {
                     $('.nav-incoming').addClass('active');
@@ -299,8 +293,9 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                     });
                     $('#close-list').click(function () {
                         Swal.fire({
-                            title: 'Do you want to submit?',
+                            title: 'Do you want to close imcoming',
                             showDenyButton: true,
+                            showCancelButton: true,
                             confirmButtonText: 'Yes',
                             denyButtonText: `No`
                         }).then((result) => {
@@ -326,9 +321,9 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                                         }
                                     }
                                 });
-                                Swal.fire('Submited!', '', 'success');
+                                Swal.fire('Saved!', '', 'success');
                             } else if (result.isDenied) {
-                                Swal.fire('Not submit', '', 'info');
+                                Swal.fire('Changes are not saved', '', 'info');
                             }
                         });
                     });
@@ -363,8 +358,8 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                             }
                         }
                     });
-                    }
-                    });
+                }});
+                    
                 };
             </script>
         </div>
