--- a/WarehouseAPI/src/main/resources/templates/user/profile.html
+++ b/WarehouseAPI/src/main/resources/templates/user/profile.html
@@ -19,7 +19,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
             <h5 th:if="${alert}" class="alert alert-danger" th:text="${alert}"></h5>
             <form th:action="@{/user/save-profile}" method="post" th:object="${user}" 
                   oninput='confirm_password.setCustomValidity(confirm_password.value != password.value ? "Passwords do not match." : "")'
-                  name="myForm" >
+                  name="myForm" onsubmit="return confirm('Are you sure want to change your profile?')">
                 <input type="hidden" th:field="*{id}">
                 <div class="form-group">
                     <label>Username</label>
@@ -44,7 +44,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                         <span th:text="'['+${role.name}+']'"></span>
                     </div>
                 </div>
-                <button type="button" onclick="return confirmSave()" class="btn btn-primary">Update</button>
+                <button type="submit" class="btn btn-primary">Update</button>
             </form>
             </div>
         
@@ -53,22 +53,22 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
             <script th:src="@{/vendor/datatables/dataTables.bootstrap4.min.js}"></script>
             <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
             <script>
-                function confirmSave() {
-                    let $form = $(this).closest('form');
-                    console.log(id);
-                    Swal.fire({
-                        title: 'Do you want to save profile?',
-                        icon: 'question',
-                        showCancelButton: true,
-                        confirmButtonColor: '#3085d6',
-                        cancelButtonColor: '#d33',
-                        confirmButtonText: 'Yes'
-                    }).then((result) => {
-                        if (result.isConfirmed) {
-                            $form.submit();
-                        }
-                    });
-                };
+//                function confirmSave() {
+//                    let $form = $(this).closest('form');
+//                    console.log(id);
+//                    Swal.fire({
+//                        title: 'Do you want to save profile?',
+//                        icon: 'question',
+//                        showCancelButton: true,
+//                        confirmButtonColor: '#3085d6',
+//                        cancelButtonColor: '#d33',
+//                        confirmButtonText: 'Yes'
+//                    }).then((result) => {
+//                        if (result.isConfirmed) {
+//                            $form.submit();
+//                        }
+//                    });
+//                };
             </script>
     </body>
 </html>
