--- a/WarehouseAPI/src/main/resources/templates/allocate/index.html
+++ b/WarehouseAPI/src/main/resources/templates/allocate/index.html
@@ -86,7 +86,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                                 </div>
                                 <div class="form-group col-6">
                                     <label for="date">Delivery Date</label>
-                                    <input type="date" id="date" class="form-control"/> 
+                                    <input type="date" id="date" readonly="true" class="form-control"/> 
                                 </div>
                             </div>
 
@@ -126,6 +126,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                          }
                       }); 
                     });
+                    $('#date').val(new Date().toJSON().slice(0,10));
                     $('#btnAdd').click(function () {
                         console.log(parseFloat($('#qtyHidden').val())<parseFloat($('#quantity').val()));
                         if(parseFloat($('#qtyHidden').val())<parseFloat($('#quantity').val())||parseFloat($('#maxQtyItem').val())<parseFloat($('#quantity').val())){
