--- a/WarehouseAPI/src/main/resources/templates/inventory/index.html
+++ b/WarehouseAPI/src/main/resources/templates/inventory/index.html
@@ -21,7 +21,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
             <div class="card shadow mb-4">
                 <div class="card-body">
                     <div class="table-responsive">
-                        <table class="table table-bordered" id="tblWh" width="100%" cellspacing="0">
+                        <table class="table table-bordered" id="tblWh" width="100%" cellspacing="0" data-order='[[ 4, "desc" ]]' data-page-length='10'>
                             <thead>
                                 <tr>
                                     <th>No.</th>
