--- a/WarehouseAPI/src/main/resources/templates/incoming/detail.html
+++ b/WarehouseAPI/src/main/resources/templates/incoming/detail.html
@@ -168,7 +168,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                                 </div>
                                 <div class="form-group col-6">
                                     <label for="wh_code">Warehouse</label>
-                                    <input class="form-control" id="wh_code" readonly value="WH001"/>
+                                    <input class="form-control" id="wh_code" readonly/>
                                 </div>
                             </div>
                             <div class="row">
@@ -251,6 +251,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                 }
 
                 $(document).ready(function () {
+                    $('#wh_code').val($('#wp').html());
                     $('.nav-incoming').addClass('active');
                     $('#tblWh').dataTable();
                     $('#new-list').click(function () {
