--- a/WarehouseAPI/src/main/resources/templates/unqualified/index.html
+++ b/WarehouseAPI/src/main/resources/templates/unqualified/index.html
@@ -84,9 +84,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                             <div class="row">
                                 <div class="form-group col-12">
                                     <label for="wh_cmt">Note</label>
-                                    <textarea class="form-control" id="rp_note">
-                                        
-                                    </textarea>
+                                    <textarea class="form-control" id="rp_note"></textarea>
                                 </div>
                             </div>
                         </div>
