--- a/WarehouseAPI/src/main/resources/templates/sale/pick-item.html
+++ b/WarehouseAPI/src/main/resources/templates/sale/pick-item.html
@@ -91,7 +91,7 @@
                     </table>
 
                     <div class="form-group">
-                        <input type="date" class="form-control" id="date"/>
+                        <input type="date" class="form-control" id="date" />
                     </div>
                 </div>
             </div>
@@ -101,6 +101,9 @@
             <script th:src="@{/vendor/datatables/dataTables.bootstrap4.min.js}"></script>
             <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
             <script>
+            var today = new Date().toJSON().slice(0,10);
+            document.getElementById("date").setAttribute("min", today);
+
                                         $('#autoMail').click(function(){
                                            $.ajax({
                                                type:"GET",
