--- a/WarehouseAPI/src/main/resources/templates/goods/index2.html
+++ b/WarehouseAPI/src/main/resources/templates/goods/index2.html
@@ -16,7 +16,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
             <!-- Page Heading -->
             <h1 class="h3 mb-2 text-gray-800">GoodsData Lists</h1>
 
-            <h5 th:if="${message}" class="alert alert-success" th:text="${message}"></h5>
+             <input th:if="${message}" type="hidden" id="messageReturn" th:value="${message}"></h5>
             <!-- DataTales Example -->
             <div class="card shadow mb-4">
                 <div class="card-header py-3">
@@ -68,6 +68,13 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
             <script>
                 document.getElementById("btnCreate").onclick = function() {location.href = "/goods/create";};
                 $(document).ready(function () {
+                    if (document.getElementById("messageReturn") !== null) {
+                        Swal.fire(
+                                'Good job!',
+                                $('#messageReturn').val(),
+                                'success'
+                                );
+                    }
                     $('.nav-goods').addClass('active');
                     $('#tblGood').dataTable();
                     $('#btnAdd').click(function () {
