--- a/WarehouseAPI/src/main/resources/templates/user/profile.html
+++ b/WarehouseAPI/src/main/resources/templates/user/profile.html
@@ -19,7 +19,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
             <h5 th:if="${alert}" class="alert alert-danger" th:text="${alert}"></h5>
             <form th:action="@{/user/save-profile}" method="post" th:object="${user}" 
                   oninput='confirm_password.setCustomValidity(confirm_password.value != password.value ? "Passwords do not match." : "")'
-                  name="myForm" onsubmit="return confirm('Are you sure want to change your profile?')">
+                  id="myForm">
                 <input type="hidden" th:field="*{id}">
                 <div class="form-group">
                     <label>Username</label>
@@ -44,31 +44,31 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                         <span th:text="'['+${role.name}+']'"></span>
                     </div>
                 </div>
-                <button type="submit" class="btn btn-primary">Update</button>
+                <button type="submit" id="btnSubmit" class="btn btn-primary">Update</button>
             </form>
-            </div>
-        
             <script th:src="@{/vendor/jquery/jquery.min.js}"></script>
             <script th:src="@{/vendor/datatables/jquery.dataTables.min.js}"></script>
             <script th:src="@{/vendor/datatables/dataTables.bootstrap4.min.js}"></script>
             <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
             <script>
-//                function confirmSave() {
-//                    let $form = $(this).closest('form');
-//                    console.log(id);
-//                    Swal.fire({
-//                        title: 'Do you want to save profile?',
-//                        icon: 'question',
-//                        showCancelButton: true,
-//                        confirmButtonColor: '#3085d6',
-//                        cancelButtonColor: '#d33',
-//                        confirmButtonText: 'Yes'
-//                    }).then((result) => {
-//                        if (result.isConfirmed) {
-//                            $form.submit();
-//                        }
-//                    });
-//                };
+                $('#btnSubmit').click(function (e) {
+                            e.preventDefault();
+                            Swal.fire({
+                                title: 'Do you want to save the changes?',
+                                showDenyButton: true,
+                                confirmButtonText: 'Save',
+                                denyButtonText: `Don't save`,
+                            }).then((result) => {
+                                /* Read more about isConfirmed, isDenied below */
+                                if (result.isConfirmed) {
+                                    $('#myForm').submit();
+                                } else if (result.isDenied) {
+                                    Swal.fire('Changes are not saved', '', 'info')
+                                }
+                            });
+                        });
             </script>
+            </div>
+    </div>
     </body>
 </html>
