--- a/WarehouseAPI/src/main/resources/templates/transaction/index.html
+++ b/WarehouseAPI/src/main/resources/templates/transaction/index.html
@@ -23,7 +23,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                     <h3 class="card-title">Transaction Report</h3>
                 </div>
                 <div class="card-header py-3">
-                    <button onclick="ExportToExcel('xlsx','Transactions.xlsx')" class="btn btn-primary">Export to Excel</button>
+                    <button onclick="ExportToPDF()" class="btn btn-primary">Export to PDF</button>
                 </div>
                 <div class="card-body">
                     <div class="table-responsive">
@@ -76,13 +76,32 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
             <script th:src="@{/vendor/datatables/dataTables.bootstrap4.min.js}"></script>
             <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
             <script type="text/javascript" src="https://unpkg.com/xlsx@0.15.1/dist/xlsx.full.min.js"></script>
+            <script src="//cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.3/jspdf.min.js"></script>
+            <script src="https://unpkg.com/jspdf-autotable@3.5.22/dist/jspdf.plugin.autotable.js"></script>
             <script>
-                        function ExportToExcel(type, fn, dl) {
-                            var elt = document.getElementById('tblWh');
-                            var wb = XLSX.utils.table_to_book(elt, {sheet: "sheet1"});
-                            return dl ?
-                                    XLSX.write(wb, {bookType: type, bookSST: true, type: 'base64'}) :
-                                    XLSX.writeFile(wb, fn || ('Transaction_report.' + (type || 'xlsx')));
+                        const logo = new Image();
+                        logo.src = "http://localhost:8080/goods-photos/logo456.png";
+                        logo.width = 200;
+                        logo.height = 130;
+                        function ExportToPDF() {
+                            const date = new Date();
+                            var rowCount = $('#tblWh >tbody >tr').length;
+                            let day = date.getDate();
+                            let month = date.getMonth() + 1;
+                            let year = date.getFullYear();
+                            let currentDate = `${day}-${month}-${year}`;
+
+                            var doc = new jsPDF();
+                            doc.setFont("times");
+                            doc.autoTable({html: '#tblWh', startX: 10, startY: 40
+                            });
+                            doc.addImage(logo, 'PNG', 10, 5);
+                            doc.text("2HAT Warehouses", 86, 13);
+                            doc.text(`Transactions report (${rowCount} nearest transactions)`, 73, 24);
+                            doc.setFont("times");
+                            doc.setFontSize(12);
+                            doc.text(`Date created: ${currentDate}`, 154, 33);
+                            doc.save(`transaction_report_${currentDate}.pdf`);
                         }
                         $(document).ready(function () {
                             $('.nav-trans').addClass('active');
