--- a/WarehouseAPI/src/main/resources/templates/home/index.html
+++ b/WarehouseAPI/src/main/resources/templates/home/index.html
@@ -352,7 +352,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                                
                                 pdf.addImage(img, 'PNG', 26, 17);
                                 pdf.setFontStyle("bold");
-                                pdf.text("2HAT WAREHOUSE", 225, 13);
+                                pdf.text("DASHBOARD REPORT", 225, 13);
                                 pdf.save("order_chart" + currentDate + ".pdf");
                             });
 
